MC-1263: Buttons of Image Content Block are not aligned correctly
- Updated width

--- a/app/code/Magento/PageBuilder/view/adminhtml/web/css/source/content-type/image/_default.less
+++ b/app/code/Magento/PageBuilder/view/adminhtml/web/css/source/content-type/image/_default.less
@@ -33,7 +33,7 @@
             margin-left: 0;
             margin-right: 0;
             margin-top: 15px;
-            max-width: 150px;
+            max-width: 180px;
             width: 100%;
         }
     }
